<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="940dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_gradient">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_icon"
        android:src="@mipmap/app_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name_text"
        android:src="@drawable/splash_screen_app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.196" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_remove_ads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_drawer_select_item_gradient"
        android:drawablePadding="15dp"
        android:fontFamily="@font/josefin_sans_regular"
        android:paddingHorizontal="15dp"
        android:text="@string/remove_ads"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:icon="@drawable/drawer_premium_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.256" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_our_apps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:background="@android:color/transparent"
        android:drawablePadding="15dp"
        android:fontFamily="@font/josefin_sans_regular"
        android:paddingHorizontal="15dp"
        android:text="@string/our_apps"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:icon="@drawable/custom_drawer_our_apps"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.323" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_give_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawablePadding="15dp"
        android:fontFamily="@font/josefin_sans_regular"
        android:paddingHorizontal="15dp"
        android:text="@string/give_rating"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:icon="@drawable/custom_drawer_give_rating"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.386" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_feed_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:background="@android:color/transparent"
        android:drawablePadding="15dp"
        android:fontFamily="@font/josefin_sans_regular"
        android:paddingHorizontal="15dp"
        android:text="@string/your_feedback"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:icon="@drawable/custom_drawer_feedback"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.452" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_terms_privacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:background="@android:color/transparent"
        android:drawablePadding="15dp"
        android:fontFamily="@font/josefin_sans_regular"
        android:paddingHorizontal="15dp"
        android:text="@string/terms_privacy"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:icon="@drawable/custom_drawer_terms_privacy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.515" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_app_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:background="@android:color/transparent"
        android:drawablePadding="15dp"
        android:fontFamily="@font/josefin_sans_regular"
        android:paddingHorizontal="15dp"
        android:text="@string/app_update"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:icon="@drawable/custom_drawer_app_update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.581" />


</androidx.constraintlayout.widget.ConstraintLayout>