<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/folders_icon"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginEnd="366dp"
        android:background="@drawable/music_and_folder_art_background"
        android:contentDescription="@string/song_thumbnail"
        android:src="@drawable/folders_name_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/folders_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/folders_name"
        android:fontFamily="@font/josefin_sans_regular"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toEndOf="@+id/folders_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.384" />

    <ImageView
        android:id="@+id/folder_menu_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/folders_menu_options"
        android:src="@drawable/song_options_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.987"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.512" />


</androidx.constraintlayout.widget.ConstraintLayout>